mi primer confirmacion de actualizacion

--- a/about.html
+++ b/about.html
@@ -30,7 +30,9 @@
 <img src="mujeres programando-1.jpg" alt=""/>
 </div>
   </main>
-
+<div class="container-greeting">
+  <h1> ¡GRACIAS POR SU VISITA!</h1>
+</div>
   <footer>
     <p>Pongamos informacion sobre el desarrollador o la compañia</p>
     <button onclick="showAlert()" aria-label="Haz clic en mi">¡Haz clic en mi!</button>
